--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,143 @@
 main h1 {
-     color:#00ff00;
-     }
+     text-decoration:none;
+     color:#ccff00;
+     background-color:#5e31e8;
+     font-family:"arial black", gadget, sans-serif;
+     border-radius:33px;
+     font-size:36px;
+     text-align:right;
+     width:1212px;
+
      
-main p {
-     color:#ff0000;
 }
 
-a.currentPage:hover {
-     color:#ff0000;
+main h1:hover {
+     color:#ff0065;
+     background-color:#ccff00;
+
+}
+main p {
+     color:#ff0065;
+     background-color:#ccff00;
+     font-family:"arial black", gadget, sans-serif;
+
+}
+
+.currentPage:hover {
+     color:#ccff00
      
 }
+
+
+nav {
+     float:right;
+     top:-110px;
+     position:relative;
+     font-size:2.3em;
+     margin-bottom:-90px;
+     margin-right:30px;
+     right: 20px;
+}
+
+.myfamily {
+     width:400px;
+     margin:1px;
+     border-radius:33px;
+     
+     
+}
+
+.weizenbier {
+     width:400px;
+     margin:1px;
+     border-radius:33px;
+}
+.rt {
+     width:400px;
+     margin:1px;
+     border-radius:33px;
+}
+
+.logo {
+     color:#ccff00;
+     background-color:#ff0065;
+     text-decoration:none;
+     font-weight:900;
+     padding:8px;
+     border-radius:33px;
+     font-size:34px;
+     font-family:"arial black", gadget, sans-serif;
+}
+
+.logo:hover {
+     color:#5e31e8;
+     background-color:#ccff00;
+     
+} 
+
+
+
+.leftColumn {
+     float:left;
+     width:402px;
+     color:#ccff00;
+     background-color:#ff0065;
+     font-family:"arial black", gadget, sans-serif;
+     text-align:center;
+     margin:1px;
+     border-radius:33px;
+     font-size:24px;
+     height:347px;
+}
+
+.centerColumn {
+     float:left;
+     width:403px;
+     color:#ccff00;
+     background-color:#ff0065;
+     font-family:"arial black", gadget, sans-serif;
+     text-align:center;
+     margin:1px;
+     border-radius:33px;
+     font-size:24px;
+     height:347px;
+}
+.rightColumn {
+     float:left;
+     width:403px;
+     color:#ccff00;
+     background-color:#ff0065;
+     font-family:"arial black", gadget, sans-serif;
+     text-align:center;
+     margin:1px;
+     border-radius:33px;
+     font-size:24px;
+     height:347px;
+}
+
+body {
+     background-color:#20dfb0;
+}
+
+li {
+     list-style:none; 
+     display:inline;
+     background-color:#ccff00;
+  
+}
+
+li:hover {
+     background-color:#ff0065;
+}
+
+li a {
+     color:#5e31e8;
+     text-decoration:none;
+     padding:8px;
+}
+
+li {
+     border-radius:33px;
+     font-family:"arial black", gadget, sans-serif;
+}
+
