--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,21 @@
-main h1 {
-     text-decoration:none;
-     color:#ccff00;
-     background-color:#5e31e8;
-     font-family:"arial black", gadget, sans-serif;
-     border-radius:33px;
-     font-size:36px;
-     text-align:right;
-     width:1212px;
+@import url(https://fonts.googleapis.com/css?family=Homemade+Apple|Coming+Soon);
 
+html, body {
+     width:100%;
+     height:100%;
+     margin:0px;
+     padding:0px;
+}
+
+
+
+.titleButton {
+     text-align:center;
      
-}
-
-main h1:hover {
-     color:#ff0065;
-     background-color:#ccff00;
+     width:9em;
+     margin:16px auto;
 
 }
-main p {
-     color:#ff0065;
-     background-color:#ccff00;
-     font-family:"arial black", gadget, sans-serif;
-
-}
-
 .currentPage:hover {
      color:#ccff00
      
@@ -34,110 +27,361 @@ nav {
      top:-110px;
      position:relative;
      font-size:2.3em;
-     margin-bottom:-90px;
+     height:6px;
      margin-right:30px;
      right: 20px;
+     text-shadow: 1px 1px #ff00cc;
+     
+}
+main h1 {
+     
+     text-decoration:none;
+     color:#ccff00;
+     background-color:#b300ff;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
+     /*font-family: 'Coming Soon', cursive;*/
+     border-radius:33px;
+     font-size:36px;
+     text-align:center;
+     width:100%;
+     text-shadow: 1px 1px #ff00cc;
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+     
 }
 
+main h1:hover {
+     color:#ff00cc;
+     background-color:#ccff00;
+
+}
+main p {
+     float:left;
+     color:#5e31e8;
+     background-color:#ccff00;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Coming Soon', cursive;
+     padding-left:18px;
+     padding-right:18px;
+     border-radius:33px;
+     margin:16px auto;
+
+}
+.logo {
+     color:#ccff00;
+     background-color:#ff00cc;
+     text-decoration:none;
+     font-weight:900;
+     padding:8px;
+     border-radius:33px;
+     font-size:1.4em;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
+     
+     text-shadow: 1px 1px #ff00cc;
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+}
+.logo:hover {
+     color:#b300ff;
+     background-color:#ccff00;
+     
+} 
+
+li {
+     list-style:none; 
+     display:inline;
+     background-color:#ccff00;
+     border-radius:33px 33px 0px 0px;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+}
+
+li:hover {
+     
+     background-color:#b300ff;
+     text-shadow: 1px 1px #ccff00;
+}
+
+li a {
+     color:#ff00cc;
+     text-decoration:none;
+     padding:8px;
+}
+
+#bannerHome {
+     overflow:hidden;
+     width: 100%;
+     padding:190px 0px;
+     border-top:3px solid #b300ff;
+     background-size:cover;
+     background:url(../images/banner-home-image.jpg) no-repeat center top #ccff00;
+     margin-bottom:17px;
+
+     
+     
+}
+
+.center {
+     width: 20em;
+     margin:0 auto;
+  
+     border-radius:33px;
+}
+
+.bannerText {
+     color:#ccff00;
+
+     text-align: center;
+
+     font-size:2em;
+     font-family: 'Homemade Apple', cursive;
+     /*font-family:"arial black", gadget, sans-serif;*/
+   
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+
+}
+
+.bannerText:hover {
+     color:#ccff00;
+     background-color:#b300ff;
+     border-radius:33px;
+}
+
+
+
 .myfamily {
-     width:400px;
-     margin:1px;
+     width:100%;
+     
      border-radius:33px;
      
      
 }
 
 .weizenbier {
-     width:400px;
-     margin:1px;
+     width:100%;
+     
      border-radius:33px;
+     
 }
 .rt {
-     width:400px;
-     margin:1px;
+     width:100%;
+   
      border-radius:33px;
-}
-
-.logo {
-     color:#ccff00;
-     background-color:#ff0065;
-     text-decoration:none;
-     font-weight:900;
-     padding:8px;
-     border-radius:33px;
-     font-size:34px;
-     font-family:"arial black", gadget, sans-serif;
-}
-
-.logo:hover {
-     color:#5e31e8;
-     background-color:#ccff00;
      
-} 
+}
 
+
+
+
+.leftColumn h2, .centerColumn h2, .rightColumn h2 {
+     font-size:2em;
+     
+     
+    
+}     
 
 
 .leftColumn {
      float:left;
-     width:402px;
+     width:374px;
      color:#ccff00;
-     background-color:#ff0065;
-     font-family:"arial black", gadget, sans-serif;
+     background-color:#ff00cc;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
      text-align:center;
-     margin:1px;
+     margin:0 auto;
      border-radius:33px;
-     font-size:24px;
-     height:347px;
+     height:297px;
 }
 
 .centerColumn {
      float:left;
-     width:403px;
+     width:375px;
      color:#ccff00;
-     background-color:#ff0065;
-     font-family:"arial black", gadget, sans-serif;
+     background-color:#ff00cc;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
      text-align:center;
-     margin:1px;
+     margin:0 auto;
      border-radius:33px;
-     font-size:24px;
-     height:347px;
+     height:297px;
 }
 .rightColumn {
      float:left;
-     width:403px;
+     width:375px;
      color:#ccff00;
-     background-color:#ff0065;
-     font-family:"arial black", gadget, sans-serif;
+     background-color:#ff00cc;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
      text-align:center;
-     margin:1px;
+     margin:0 auto;
      border-radius:33px;
-     font-size:24px;
-     height:347px;
+     height:297px;
 }
 
 body {
-     background-color:#20dfb0;
+     background-color:#12abff;
 }
 
-li {
-     list-style:none; 
-     display:inline;
-     background-color:#ccff00;
-  
+.leftColumn span, .rightColumn span, .centerColumn span {
+     font-size:2em;
 }
 
-li:hover {
-     background-color:#ff0065;
-}
-
-li a {
-     color:#5e31e8;
-     text-decoration:none;
-     padding:8px;
-}
-
-li {
+.leftColumn p, .centerColumn p, .rightColumn p {
      border-radius:33px;
-     font-family:"arial black", gadget, sans-serif;
+}
+
+
+ 
+/*about me*/
+
+.headshot {
+     float:left;
+     clear:left;
+     margin-top:470px;
+     border-radius:33px 0px 0px 33px;
+     border:13px solid #ff00cc;
+     
+}
+
+.headshot:hover {
+     border:13px solid #ccff00;
+}
+h3 {
+     
+     color:#ccff00;
+     background-color:#ff00cc;
+     text-decoration:none;
+     font-size:2em;
+     padding:8px;
+     border-radius:0px 33px 33px 0px;
+     margin-top:37px;
+     margin-bottom:-1px;
+     /*font-family:"arial black", gadget, sans-serif;*/
+     font-family: 'Homemade Apple', cursive;
+     width:430px;
+     text-shadow: 1px 1px #ff0065;
+     text-align:center;
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+}
+
+h3:hover {
+     
+     color:#b300ff;
+     background-color:#ccff00;
+}
+
+/*#aboutMe {*/
+     /*margin:25px 0px;*/
+/*}*/
+
+
+.articleHome-right {
+     margin-top:433px;
+     color:#ccff00;
+     float:left;
+     width:67%;
+     border-radius:0px 33px 33px 0px;
+     text-align:justify;
+     
+   
+}
+.articleHome-right p {
+     margin:1px auto;
+     border-radius:0px 33px 33px 11px;
+     margin-bottom:16px;
+}
+
+
+
+
+
+div.center {
+     text-align:center;
+     margin:16px auto;
+     
+     
+}
+
+a.button {
+     text-align:center;
+     color:#ccff00;
+     background-color:#ff00cc;
+     text-decoration:none;
+     font-weight:900;
+     padding:6px;
+     border-radius:33px;
+     font-size:22px;
+     transition:background 0.4s linear 0s, color 0.4s linear 0s;
+     font-family: 'Homemade Apple', cursive;
+}
+
+a.button:hover {
+     color:#b300ff;
+     background-color:#ccff00;
+}
+
+
+
+
+/*footer*/
+
+#copyright {
+     overflow:hidden;
+     padding:40px 0px;
+     border-top:3px dashed #ff00cc;
+     background-color:#b300ff;
+     display:block;
+}
+
+footer {
+     margin-top:1188px;
+     text-align:center;
+     background-color:#b300ff;
+     color:#ccff00;
+     text-decoration:none;
+     border-radius:0px;
+     height:49px;
+    
+}
+
+/*social media styles*/
+
+.fa {
+     background-color: rgb(255, 0, 101);
+     border:3px solid #ffffff;
+     border-radius:100%;
+     font-size:2em !important;
+     margin:5px;
+     padding:5px;
+     color:#ffffff;
+     height:28px;
+     width:28px;
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+}
+
+.fa:hover {
+     color:#ccff00;
+     background-color:#ff00cc;
+}
+
+.fa-facebook {background-color:#3b5998;}
+.fa-twitter {background-color:#55aced;}
+.fa-instagram {background-color:#125688;}
+
+.JoshApplebyCo {
+    
+     color:#ccff00;
+     text-decoration:none;
+     background-color:#ff00cc;
+     border-radius:33px;
+     padding:2px;
+     transition:background 0.6s linear 0s, color 0.6s linear 0s;
+}
+
+.JoshApplebyCo:hover {
+     color:#b300ff;
+     background-color:#ccff00;
 }
 
