--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,7 @@ a.button:hover {
 }
 
 footer {
-     margin-top:1188px;
+     margin-top:1156px;
      text-align:center;
      background-color:#b300ff;
      color:#ccff00;
@@ -385,3 +385,4 @@ footer {
      background-color:#ccff00;
 }
 
+/*http://japplebyco.github.io/josh1/*/
