--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,11 @@ footer {
      background-color:#ccff00;
 }
 
-/
+
+.music {
+     width:350px;
+     margin:0 auto;
+}
 
 /*MOBILE WEBSITE STYLES*/
 
